hide daydash blog

--- a/public/landing/index.html
+++ b/public/landing/index.html
@@ -122,9 +122,9 @@
                <!-- footer: blog & social -->
                <div class="footer">
 
-                 <!-- <div class="blog">
+                 <div class="blog">
                    <strong>อ่าน Blog → </strong><a href="http://daydash.co/blog/weekend-activities-for-couple-in-bangkok" title="5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป">5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป</a>
-                 </div> -->
+                 </div>
 
                  <div class="social">
                    Follow us:
